--- a/views/characters/list.hbs
+++ b/views/characters/list.hbs
@@ -14,7 +14,7 @@
             <input type="hidden" name="name" value={{name}} />
             <input type="hidden" name="species" value={{species}} />
             <input type="hidden" name="gender" value={{gender}} />
-            <input type="hidden" name="planet" value={{planet}} />
+            <input type="hidden" name="planet" value={{homeworld}} />
             <input type="hidden" name="image" value={{image}} />
             <input type="hidden" name="apiId" value={{id}} />
 
