--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,11 +1,17 @@
-<form action="/auth/login" method="POST">
-  <label>
-    Username
-    <input type="text" name="username" />
-  </label>
-  <label>
-    Password
-    <input type="password" name="password" />
-  </label>
-  <button type="submit">Submit</button>
-</form>
+<div class="login">
+
+  <h1 class="titologin">Enter to your profile</h1>
+
+  <form action="/auth/login" method="POST">
+    <label>
+      Username:
+      <input type="text" name="username" />
+    </label>
+    <label>
+      Password:
+      <input type="password" name="password" />
+    </label>
+    <button type="submit">Enter</button>
+  </form>
+
+</div>
