--- a/views/characters/list.hbs
+++ b/views/characters/list.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Characters list</h1>
+  <h1 class="list">Characters list</h1>
 
   <div class="row row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5">
     {{! image name status }}
@@ -7,8 +7,9 @@
       <div class="col">
         <div class="card shadow-sm">
           <img src="{{image}}" alt="" />
-          <p>{{name}}</p>
-          <p>{{homeworld}}</p>
+          <h5><u>Name:</u> {{name}}</h5>
+          <p><u>Specie:</u> {{species}}</p>
+          <p><u>Homeworld:</u> {{homeworld}}</p>
           <form action="/add-favorite" method="POST">
 
             <input type="hidden" name="name" value={{name}} />
@@ -18,7 +19,7 @@
             <input type="hidden" name="image" value={{image}} />
             <input type="hidden" name="apiId" value={{id}} />
 
-            <button type="submit">Añadir a favoritos</button>
+            <button type="submit">Add to Favourites</button>
           </form>
         </div>
       </div>
