--- a/views/characters/list.hbs
+++ b/views/characters/list.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="list">Characters list</h1>
 
-  <div class="row row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5">
     {{! image name status }}
     {{#each characters}}
       <div class="col">
@@ -12,12 +12,12 @@
           <p><u>Homeworld:</u> {{homeworld}}</p>
           <form action="/add-favorite" method="POST">
 
-            <input type="hidden" name="name" value={{name}} />
-            <input type="hidden" name="species" value={{species}} />
-            <input type="hidden" name="gender" value={{gender}} />
-            <input type="hidden" name="planet" value={{homeworld}} />
-            <input type="hidden" name="image" value={{image}} />
-            <input type="hidden" name="apiId" value={{id}} />
+            <input type="hidden" name="name" value="{{name}}" />
+            <input type="hidden" name="species" value="{{species}}" />
+            <input type="hidden" name="gender" value="{{gender}}" />
+            <input type="hidden" name="homeworld" value="{{homeworld}}" />
+            <input type="hidden" name="image" value="{{image}}" />
+            <input type="hidden" name="apiId" value="{{id}}" />
 
             <button type="submit">Add to Favourites</button>
           </form>
