--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,17 +1,16 @@
 <div class="signup">
 
   <h1 class="titolsignup">Create your profile</h1>
-
   <form action="/auth/signup" method="POST">
     <label>
       New Username:
-      <input type="text" name="username" />
+      <input class="input" type="text" name="username" />
     </label>
     <label>
       New Password:
-      <input type="password" name="password" />
+      <input class="input" type="password" name="password" />
     </label>
-    <button type="submit">Join</button>
+    <button class='button' type="submit">Join</button>
   </form>
 
 </div>
