--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-family: helvetica;
   background-image: url(../images/High_resolution_wallpaper_background_ID_77701160208.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -10,6 +11,11 @@ body {
   justify-content: center;
   color: white;
   padding-top: 300px;
+}
+
+.navbar-inner {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50px;
 }
 
 .principal {
@@ -50,6 +56,7 @@ body {
   justify-content: center;
   color: white;
   margin-top: 20px;
+  font-style: oblique;
 }
 
 .list {
@@ -62,4 +69,49 @@ body {
 
 a {
   color: #00b7ff;
+}
+
+.card {
+  border-radius: 50px;
+}
+
+.pic {
+  height: 600px;
+  width: 400px;
+  border-radius: 50px;
+}
+
+.info {
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.boton {
+  display: flex;
+  justify-content: center;
+}
+
+.input {
+  border-style: none;
+  border-radius: 50px;
+}
+
+.button {
+  border-radius: 25px;
+  border-style: none;
+  padding: 5px;
+}
+
+.add {
+  font-size: 18px;
+  border-radius: 20px;
+  background-color: white;
+}
+
+.delete {
+  font-size: 18px;
+  border-radius: 20px;
+  border-style: none;
+  background-color: red;
+  color: white;
 }
