--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -5,13 +5,13 @@
   <form action="/auth/login" method="POST">
     <label>
       Username:
-      <input type="text" name="username" />
+      <input class="input" type="text" name="username" />
     </label>
     <label>
       Password:
-      <input type="password" name="password" />
+      <input class="input" type="password" name="password" />
     </label>
-    <button type="submit">Enter</button>
+    <button class="button" type="submit">Enter</button>
   </form>
 
 </div>
